<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_geofence"
        android:title="@string/geofence"
        android:icon="@drawable/ic_location_on_black_24dp"
        />
    <item
        android:id="@+id/menu_savebyperson"
        android:title="@string/savebyperson"
        android:icon="@drawable/ic_menu_camera"
        />

    <item
        android:id="@+id/menu_savebylocation"
        android:title="@string/savebylocation"
        android:icon="@drawable/ic_add_location_black_24dp"
         />

    <item
        android:id="@+id/menu_my_friends"
        android:title="@string/my_friends"
        android:icon="@drawable/ic_people_outline_black_24dp"
        />
    <item
        android:id="@+id/menu_my_circles"
        android:title="@string/my_caregivers"
        android:icon="@drawable/ic_people_black_24dp"
        />

</menu>